--- a/OnlineExam/Views/Exam/Index.cshtml
+++ b/OnlineExam/Views/Exam/Index.cshtml
@@ -1,46 +1,177 @@
-﻿@model List<Exam>
+﻿@model ExamListAndNumQuestoins
+@{
 
-<div class="container p-3">
+    Layout = "~/Views/Shared/_SideNavBar.cshtml";
 
-    <table class="table table-dark mt-5">
-        <thead>
-            <tr>
+    int curIdx = 0;
 
-                <th scope="col">#</th>
-                <th scope="col">Course name</th>
-
-            </tr>
-        </thead>
-        <tbody>
-
-            @foreach (var x in Model)
-            {
-                <tr>
-                    <td>@x.Title</td>
-                    <td>@x.ExamId</td>
-                    <td>@x.Duration</td>
-                    <td>@x.AddedAt</td>
-
-                    <td>
-                        <a asp-controller="Exam" asp-action="ViewQuestions" asp-route-Id="@x.ExamId"  class="btn btn-info">View Questions</a>
-                    </td>
-
-                    <td>
-                        <a asp-controller="Exam" asp-action="EditExam" asp-route-Id="@x.ExamId" class="btn btn-success">Edit</a>
-                    </td>
-
-                    <td>
-                        <a asp-controller="Exam" asp-action="Delete" asp-route-id="@x.ExamId" class="btn btn-danger">Delete</a>
-                    </td>
-
-
-                </tr>
-
-            }
-
-        </tbody>
-    </table>
-    
-    <a asp-controller="Exam" asp-action="CreateExam" class="btn btn-primary">Create Exam</a>
-
+}
+<div class="top-section">
+    <h2>Exam List</h2>
+    <img src="~/images/examList_img.png" />
 </div>
+<div class="bottom-section">
+    <div class="table-titles">
+        <p>Exam</p>
+        <p>Questions</p>
+        <p>Date</p>
+        <p>Time Remaining</p>
+    </div>
+    <div class="items">
+        <ul class="listOfItem">
+            @foreach (var x in Model.exams)
+            {
+                var numberOfQuestions = Model.numOfQuestions[curIdx];
+                DateTime EndTime = Model.EndTime[curIdx];
+                DateTime CurTime = DateTime.Now;
+
+                string ActionName = EndTime > CurTime ? "ViewQuestions" : "ViewResults";
+
+                curIdx++;
+
+                <li>
+                    <a class="item" asp-controller="Exam"
+                        asp-action="@ActionName"
+                        asp-route-Id="@x.ExamId">
+                        <p>@x.Title</p>
+
+                        <p>
+                            @numberOfQuestions
+                        </p>
+
+                        <p>@x.StartTime</p>
+
+                        <p id=@string.Concat("time", @x.ExamId)>
+                            <script>
+                                var countDownDate = new Date('@x.StartTime.ToString()').getTime();
+                                // Update the count down every 1 second
+                                var x = setInterval(function () {
+
+                                    // Get today's date and time
+                                    var now = new Date().getTime();
+
+                                    // Find the distance between now and the count down date
+                                    var distance = countDownDate - now;
+
+                                    // Time calculations for days, hours, minutes and seconds
+                                    var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+                                    var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                                    var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+                                    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+                                    // Output the result in an element with id
+                                    document.getElementById("@string.Concat("time", @x.ExamId)").innerHTML = days + " d ," + hours + " h ,"
+                                        + minutes + " m ," + seconds + " s. ";
+
+                                    // If the count down is over, write some text
+                                    if (distance < 0) {
+                                        clearInterval(x);
+                                        document.getElementById("@string.Concat("time", @x.ExamId)").innerHTML = "PASSED";
+                                    }
+                                }, 1000);
+                            </script>
+                        </p>
+                    </a>
+                    <a onclick="show_more_menu(event)" asp-controller="Exam" asp-action="Delete" asp-route-id="@x.ExamId" class="btn btn-danger ">
+                        <span class="icon"><i class="fa fa-trash"></i></span>
+                        <script>
+                            function show_more_menu(e) {
+                                if (!confirm(`Are you sure delete this Exam?`)) e.preventDefault();
+                            }
+                        </script>
+
+                    </a>
+                </li>
+            }
+        </ul>
+    </div>
+</div>
+
+<script>
+    function setActionForExam(endTime){
+        var now = new Date();
+        if(now > endTime)
+            return "ExamResults";
+        return "ViewQuestions";
+    }
+</script>
+<style>
+
+    .listOfItem li {
+        width: 100%;
+        gap: 119px;
+        display: inline-flex;
+        border-bottom: 1px solid #D9D9D9;
+        align-items: center;
+    }
+
+    .item {
+        gap: 115px;
+        display: inline-flex;
+        align-items: center;
+        padding-top: 4px;
+        padding-left: 41px;
+    }
+
+    .listOfItem li:hover {
+        background: #f7f4f4
+    }
+
+    .listOfItem li p {
+        font-size: 14px;
+        font-weight: 500;
+        color: #000000;
+        align-items: center;
+    }
+
+    .table-titles {
+        height: fit-content;
+        width: 100%;
+        background: #D9D9D9;
+        display: flex;
+        text-align: center;
+        gap: 144px;
+        position: relative;
+    }
+
+        .table-titles p {
+            margin-top: 22px;
+            vertical-align: middle;
+            margin-left: 39px;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-size: 18px;
+        }
+
+    .items p {
+        width: 122px;
+        display: inline;
+    }
+
+    .top-section {
+        height: 220px;
+        width: 100%;
+        background-color: white;
+        text-align: center;
+    }
+
+        .top-section h2 {
+            line-height: 1.5;
+            display: inline-block;
+            margin-top: 95px;
+            font-weight: 600;
+        }
+
+        .top-section img {
+            width: 190px;
+            height: 190px;
+            float: right;
+            margin-top: 24px;
+            margin-right: 32px;
+        }
+
+    .bottom-section {
+        height: fit-content;
+        width: 100%;
+    }
+
+</style>
