--- a/OnlineExam/Views/Shared/_StudentExamBar.cshtml
+++ b/OnlineExam/Views/Shared/_StudentExamBar.cshtml
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="~/OnlineExam.styles.css" asp-append-version="true" />
     <link href='https://fonts.googleapis.com/css?family=Jua' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.0/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
