--- a/OnlineExam/Views/Exam/ExamResultDetails.cshtml
+++ b/OnlineExam/Views/Exam/ExamResultDetails.cshtml
@@ -1,9 +1,247 @@
 ﻿@model ExamAnswerResult
-
-<p>asdfsd</p>
 @{
-    foreach(var x in Model.lstOfQuestionAnswers)
+
+    Layout = "~/Views/Shared/_StudentExamBar.cshtml";
+    int cntQuestion = 1;
+}
+@functions {
+    public string GetBackgroundStyle(int trueAnswer, int selectedAnswer, int curOption)
     {
-        <p>@x.Head</p>
+        if (trueAnswer == curOption)
+            return "background-color:#00A607; opacity: 0.6;";
+        else if (selectedAnswer == curOption)
+            return "background-color:#E00000; opacity: 0.6;";
+        return "background-color:white";
     }
 }
+<div class="main-container">
+    <div class="header-container">
+        <p>@Model.ExamName</p>
+        <p>@Model.StudentName</p>
+    </div>
+    <div class="studentInfo-container">
+        <div class="info">
+            <p>@Model.StudentName</p>
+            <p>@Model.StudentId</p>
+        </div>
+        <div class="info">
+            @if (@Model.passed)
+            {
+                <p style="color:#349D38;">Passed</p>
+            }
+            else
+            {
+                <p style="color:#E00000;">Failed</p>
+            }
+
+            <p>@Model.score/@Model.numOfQuestions</p>
+        </div>
+    </div>
+    <div class="Questions-container">
+        @foreach (var item in Model.lstOfQuestionAnswers)
+        {
+            <div class="question-container">
+
+                <div class="questionHeader-container">
+                    <p id="Question-Number">
+                        Question No. @cntQuestion
+                    </p>
+                    @if (item.SelectedAnswer == item.TrueAnswer)
+                    {
+                        <span><i class="fa fa-regular fa-circle-check fa-2x" style="color:#00A607"></i></span>
+                    }
+                    else
+                    {
+                        <span><i class="fa fa-regular fa-circle-xmark fa-2x" style="color:#E00000"></i></span>
+                    }
+
+                </div>
+
+                <div class="question-container-wal-marah-de-mgd">
+                    <div class="question-txt-container">
+                        <p>@item.Head</p>
+                    </div>
+
+                    <div class="answer-container">
+                        <p>A</p>
+
+                        <div class="question-txt-container"
+                         style="@GetBackgroundStyle((int)item.TrueAnswer,(int)item.SelectedAnswer,1)">
+
+                            <p>@item.a</p>
+                            @{
+                                if (item.SelectedAnswer == 1)
+                                {
+                                    <span class="icon"><i class="fa fa-circle-check"> </i></span>
+                                }
+                                else
+                                {
+                                    <span class="icon"><i class="fa fa-regular fa-circle"> </i></span>
+                                }
+                            }
+                        </div>
+
+                    </div>
+
+                    <div class="answer-container">
+                        <p>B</p>
+                        <div class="question-txt-container"
+                         style="@GetBackgroundStyle((int)item.TrueAnswer,(int)item.SelectedAnswer,2)">
+                            <p>@item.b</p>
+                            @{
+                                if (item.SelectedAnswer == 2)
+                                {
+                                    <span class="icon"><i class="fa fa-circle-check"> </i></span>
+                                }
+                                else
+                                {
+                                    <span class="icon"><i class="fa fa-regular fa-circle"> </i></span>
+                                }
+                            }
+                        </div>
+                    </div>
+
+                    <div class="answer-container">
+                        <p>C</p>
+                        <div class="question-txt-container"
+                         style="@GetBackgroundStyle((int)item.TrueAnswer,(int)item.SelectedAnswer,3)">
+                            <p>@item.c</p>
+                            @{
+                                if (item.SelectedAnswer == 3)
+                                {
+                                    <span class="icon"><i class="fa fa-circle-check"> </i></span>
+                                }
+                                else
+                                {
+                                    <span class="icon"><i class="fa fa-regular fa-circle"> </i></span>
+                                }
+                            }
+                        </div>
+                    </div>
+
+                    <div class="answer-container">
+                        <p>D</p>
+                        <div class="question-txt-container"
+                         style="@GetBackgroundStyle((int)item.TrueAnswer,(int)item.SelectedAnswer,4)">
+                            <p>@item.d</p>
+                            @{
+                                if (item.SelectedAnswer == 4)
+                                {
+                                    <span class="icon"><i class="fa fa-circle-check"> </i></span>
+                                }
+                                else
+                                {
+                                    <span class="icon"><i class="fa fa-regular fa-circle"> </i></span>
+                                }
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
+            cntQuestion++;
+        }
+    </div>
+</div>
+<style>
+    .question-container {
+        padding: 16px 16px 16px 32px;
+        background: #D9D9D9;
+        border-radius: 18px;
+        margin-bottom: 24px;
+        width: 65%;
+    }
+
+    .question-txt-container p {
+        font-size: 16px;
+        font-weight: 600;
+        margin: 0;
+        padding: 12px;
+    }
+
+    .question-container-wal-marah-de-mgd {
+        gap: 30px;
+        display: grid;
+    }
+
+    .question-txt-container {
+        background-color:white;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        border-radius: 18px;
+        align-items: center;
+        border: 1px solid;
+    }
+
+
+    .answer-container {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .icon {
+        color: #000EE6;
+        margin-right: 16px;
+    }
+
+    .option-container {
+        width: 100%;
+        margin-top: 12px;
+        gap: 37px;
+        display: inline-flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    .header-container {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 18px;
+        padding-bottom: 18px;
+        padding-left: 72px;
+        padding-right: 72px;
+        box-shadow: -3px 1px 5px 0px rgba(0, 0, 255, .2);
+    }
+
+        .header-container p {
+            font-size: 18px;
+            font-weight: 700;
+            margin: 0px;
+        }
+
+    .studentInfo-container {
+        display: flex;
+        width: 50%;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        padding: 24px;
+        margin-left: 320px;
+        border-radius: 12px 12px 12px 12px;
+        box-shadow: 2px 3px 5px 0px rgba(0, 0, 255, .2);
+        margin-top: 42px;
+        margin-bottom: 42px;
+        padding-left: 82px;
+        padding-right: 82px;
+    }
+
+    .Questions-container {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;
+    }
+
+    .questionHeader-container {
+        display: flex;
+        justify-content: space-between;
+        padding-left: 32px;
+        padding-right: 32px;
+        padding-bottom: 12px;
+    }
+    .studentInfo-container p{
+        font-size:16px;
+        font-weight:bold;
+    }
+</style>
